plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'

}

group = 'br.com.postechfiap'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
    implementation 'org.modelmapper:modelmapper:3.2.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
    testImplementation 'junit:junit:4.13.1'
    testImplementation 'com.h2database:h2'// h2 em testes
    runtimeOnly 'com.h2database:h2' // h2 em runtime
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.15.2'
    testImplementation 'io.rest-assured:rest-assured:5.5.0'
}

tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        // Exibe informações sobre os testes passados, falhados e ignorados
        events "PASSED", "FAILED", "SKIPPED"
    }

}
